analise.output
Terminals unused in grammar

   INT
   FLOAT
   CHAR
   PALAVRA_RESERVADA
   LETRA
   DIGITO
   DIGITOS
   PALVRA
   BINARIO
   HEXA
   PONTO
   QUEBRA_LINHA
   WS
   COMENTARIO


Grammar

    0 $accept: programa $end

    1 programa: declaracao_lista

    2 declaracao_lista: declaracao fatoracao_declaracao_lista

    3 fatoracao_declaracao_lista: declaracao_lista
    4                           | %empty

    5 declaracao: var_declaracao
    6           | fun_declaracao

    7 var_declaracao: tipo_especificador IDENT PONTO_VIRGULA
    8               | tipo_especificador IDENT var_colchete PONTO_VIRGULA

    9 var_colchete: ABRE_COLCHETE NUM_INT FECHA_COLCHETE var_colchete
   10             | ABRE_COLCHETE NUM_INT FECHA_COLCHETE

   11 tipo_especificador: TIPO
   12                   | STRUCT IDENT ABRE_CHAVE atributos_declaracao FECHA_CHAVE

   13 atributos_declaracao: var_declaracao fatoracao_atributos_declaracao

   14 fatoracao_atributos_declaracao: atributos_declaracao
   15                               | %empty

   16 fun_declaracao: tipo_especificador IDENT ABRE_PARENTESES params FECHA_PARENTESES composto_decl
   17               | error FECHA_PARENTESES

   18 params: param_lista
   19       | VOID

   20 param_lista: param fatoracao_params_lista

   21 fatoracao_params_lista: VIRGULA param_lista
   22                       | %empty

   23 param: tipo_especificador IDENT
   24      | tipo_especificador IDENT ABRE_COLCHETE FECHA_COLCHETE

   25 composto_decl: ABRE_CHAVE local_declaracoes comando_lista FECHA_CHAVE

   26 local_declaracoes: var_declaracao fatoracao_local_declaracoes
   27                  | %empty

   28 fatoracao_local_declaracoes: local_declaracoes

   29 comando_lista: comando fatoracao_comando_lista
   30              | %empty

   31 fatoracao_comando_lista: comando_lista

   32 comando: selecao_decl
   33        | iteracao_decl
   34        | retorno_decl
   35        | expressao_decl
   36        | composto_decl

   37 expressao_decl: expressao PONTO_VIRGULA
   38               | PONTO_VIRGULA

   39 selecao_decl: selecao fatoracao_selecao_decl

   40 fatoracao_selecao_decl: %empty
   41                       | ELSE comando

   42 selecao: IF ABRE_PARENTESES expressao FECHA_PARENTESES comando

   43 iteracao_decl: WHILE ABRE_PARENTESES expressao FECHA_PARENTESES comando

   44 retorno_decl: RETURN PONTO_VIRGULA
   45             | RETURN expressao PONTO_VIRGULA

   46 expressao: var ATRIBUICAO expressao
   47          | expressao_simples

   48 var: IDENT
   49    | IDENT colchete_var

   50 colchete_var: ABRE_COLCHETE expressao FECHA_COLCHETE colchete_var
   51             | ABRE_COLCHETE expressao FECHA_COLCHETE

   52 expressao_simples: expressao_soma relacional expressao_soma
   53                  | expressao_soma

   54 relacional: RELACIONAL

   55 expressao_soma: termo soma expressao_soma
   56               | termo

   57 soma: SOMA
   58     | SUB

   59 termo: fator mult termo
   60      | fator

   61 mult: MULT
   62     | DIV

   63 fator: ABRE_PARENTESES expressao FECHA_PARENTESES
   64      | var
   65      | ativacao
   66      | NUM
   67      | NUM_INT

   68 ativacao: IDENT ABRE_PARENTESES args FECHA_PARENTESES

   69 args: arg_lista
   70     | %empty

   71 arg_lista: expressao fatoracao_arg_lista

   72 fatoracao_arg_lista: VIRGULA arg_lista
   73                    | %empty


Terminals, with rules where they appear

$end (0) 0
error (256) 17
INT (258)
FLOAT (259)
CHAR (260)
VOID (261) 19
STRUCT (262) 12
TIPO (263) 11
IF (264) 42
ELSE (265) 41
WHILE (266) 43
RETURN (267) 44 45
PALAVRA_RESERVADA (268)
RELACIONAL (269) 54
SOMA (270) 57
SUB (271) 58
MULT (272) 61
DIV (273) 62
ATRIBUICAO (274) 46
NUM_INT (275) 9 10 67
NUM (276) 66
ABRE_CHAVE (277) 12 25
FECHA_CHAVE (278) 12 25
ABRE_COLCHETE (279) 9 10 24 50 51
FECHA_COLCHETE (280) 9 10 24 50 51
ABRE_PARENTESES (281) 16 42 43 63 68
FECHA_PARENTESES (282) 16 17 42 43 63 68
LETRA (283)
DIGITO (284)
DIGITOS (285)
PALVRA (286)
BINARIO (287)
HEXA (288)
IDENT (289) 7 8 12 16 23 24 48 49 68
PONTO (290)
VIRGULA (291) 21 72
PONTO_VIRGULA (292) 7 8 37 38 44 45
QUEBRA_LINHA (293)
WS (294)
COMENTARIO (295)
IF_PREC (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
programa (43)
    on left: 1, on right: 0
declaracao_lista (44)
    on left: 2, on right: 1 3
fatoracao_declaracao_lista (45)
    on left: 3 4, on right: 2
declaracao (46)
    on left: 5 6, on right: 2
var_declaracao (47)
    on left: 7 8, on right: 5 13 26
var_colchete (48)
    on left: 9 10, on right: 8 9
tipo_especificador (49)
    on left: 11 12, on right: 7 8 16 23 24
atributos_declaracao (50)
    on left: 13, on right: 12 14
fatoracao_atributos_declaracao (51)
    on left: 14 15, on right: 13
fun_declaracao (52)
    on left: 16 17, on right: 6
params (53)
    on left: 18 19, on right: 16
param_lista (54)
    on left: 20, on right: 18 21
fatoracao_params_lista (55)
    on left: 21 22, on right: 20
param (56)
    on left: 23 24, on right: 20
composto_decl (57)
    on left: 25, on right: 16 36
local_declaracoes (58)
    on left: 26 27, on right: 25 28
fatoracao_local_declaracoes (59)
    on left: 28, on right: 26
comando_lista (60)
    on left: 29 30, on right: 25 31
fatoracao_comando_lista (61)
    on left: 31, on right: 29
comando (62)
    on left: 32 33 34 35 36, on right: 29 41 42 43
expressao_decl (63)
    on left: 37 38, on right: 35
selecao_decl (64)
    on left: 39, on right: 32
fatoracao_selecao_decl (65)
    on left: 40 41, on right: 39
selecao (66)
    on left: 42, on right: 39
iteracao_decl (67)
    on left: 43, on right: 33
retorno_decl (68)
    on left: 44 45, on right: 34
expressao (69)
    on left: 46 47, on right: 37 42 43 45 46 50 51 63 71
var (70)
    on left: 48 49, on right: 46 64
colchete_var (71)
    on left: 50 51, on right: 49 50
expressao_simples (72)
    on left: 52 53, on right: 47
relacional (73)
    on left: 54, on right: 52
expressao_soma (74)
    on left: 55 56, on right: 52 53 55
soma (75)
    on left: 57 58, on right: 55
termo (76)
    on left: 59 60, on right: 55 56 59
mult (77)
    on left: 61 62, on right: 59
fator (78)
    on left: 63 64 65 66 67, on right: 59 60
ativacao (79)
    on left: 68, on right: 65
args (80)
    on left: 69 70, on right: 68
arg_lista (81)
    on left: 71, on right: 69 72
fatoracao_arg_lista (82)
    on left: 72 73, on right: 71


State 0

    0 $accept: . programa $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TIPO    shift, and go to state 3

    programa            go to state 4
    declaracao_lista    go to state 5
    declaracao          go to state 6
    var_declaracao      go to state 7
    tipo_especificador  go to state 8
    fun_declaracao      go to state 9


State 1

   17 fun_declaracao: error . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 10


State 2

   12 tipo_especificador: STRUCT . IDENT ABRE_CHAVE atributos_declaracao FECHA_CHAVE

    IDENT  shift, and go to state 11


State 3

   11 tipo_especificador: TIPO .

    $default  reduce using rule 11 (tipo_especificador)


State 4

    0 $accept: programa . $end

    $end  shift, and go to state 12


State 5

    1 programa: declaracao_lista .

    $default  reduce using rule 1 (programa)


State 6

    2 declaracao_lista: declaracao . fatoracao_declaracao_lista

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TIPO    shift, and go to state 3

    $end  reduce using rule 4 (fatoracao_declaracao_lista)

    declaracao_lista            go to state 13
    fatoracao_declaracao_lista  go to state 14
    declaracao                  go to state 6
    var_declaracao              go to state 7
    tipo_especificador          go to state 8
    fun_declaracao              go to state 9


State 7

    5 declaracao: var_declaracao .

    $default  reduce using rule 5 (declaracao)


State 8

    7 var_declaracao: tipo_especificador . IDENT PONTO_VIRGULA
    8               | tipo_especificador . IDENT var_colchete PONTO_VIRGULA
   16 fun_declaracao: tipo_especificador . IDENT ABRE_PARENTESES params FECHA_PARENTESES composto_decl

    IDENT  shift, and go to state 15


State 9

    6 declaracao: fun_declaracao .

    $default  reduce using rule 6 (declaracao)


State 10

   17 fun_declaracao: error FECHA_PARENTESES .

    $default  reduce using rule 17 (fun_declaracao)


State 11

   12 tipo_especificador: STRUCT IDENT . ABRE_CHAVE atributos_declaracao FECHA_CHAVE

    ABRE_CHAVE  shift, and go to state 16


State 12

    0 $accept: programa $end .

    $default  accept


State 13

    3 fatoracao_declaracao_lista: declaracao_lista .

    $default  reduce using rule 3 (fatoracao_declaracao_lista)


State 14

    2 declaracao_lista: declaracao fatoracao_declaracao_lista .

    $default  reduce using rule 2 (declaracao_lista)


State 15

    7 var_declaracao: tipo_especificador IDENT . PONTO_VIRGULA
    8               | tipo_especificador IDENT . var_colchete PONTO_VIRGULA
   16 fun_declaracao: tipo_especificador IDENT . ABRE_PARENTESES params FECHA_PARENTESES composto_decl

    ABRE_COLCHETE    shift, and go to state 17
    ABRE_PARENTESES  shift, and go to state 18
    PONTO_VIRGULA    shift, and go to state 19

    var_colchete  go to state 20


State 16

   12 tipo_especificador: STRUCT IDENT ABRE_CHAVE . atributos_declaracao FECHA_CHAVE

    STRUCT  shift, and go to state 2
    TIPO    shift, and go to state 3

    var_declaracao        go to state 21
    tipo_especificador    go to state 22
    atributos_declaracao  go to state 23


State 17

    9 var_colchete: ABRE_COLCHETE . NUM_INT FECHA_COLCHETE var_colchete
   10             | ABRE_COLCHETE . NUM_INT FECHA_COLCHETE

    NUM_INT  shift, and go to state 24


State 18

   16 fun_declaracao: tipo_especificador IDENT ABRE_PARENTESES . params FECHA_PARENTESES composto_decl

    VOID    shift, and go to state 25
    STRUCT  shift, and go to state 2
    TIPO    shift, and go to state 3

    tipo_especificador  go to state 26
    params              go to state 27
    param_lista         go to state 28
    param               go to state 29


State 19

    7 var_declaracao: tipo_especificador IDENT PONTO_VIRGULA .

    $default  reduce using rule 7 (var_declaracao)


State 20

    8 var_declaracao: tipo_especificador IDENT var_colchete . PONTO_VIRGULA

    PONTO_VIRGULA  shift, and go to state 30


State 21

   13 atributos_declaracao: var_declaracao . fatoracao_atributos_declaracao

    STRUCT  shift, and go to state 2
    TIPO    shift, and go to state 3

    $default  reduce using rule 15 (fatoracao_atributos_declaracao)

    var_declaracao                  go to state 21
    tipo_especificador              go to state 22
    atributos_declaracao            go to state 31
    fatoracao_atributos_declaracao  go to state 32


State 22

    7 var_declaracao: tipo_especificador . IDENT PONTO_VIRGULA
    8               | tipo_especificador . IDENT var_colchete PONTO_VIRGULA

    IDENT  shift, and go to state 33


State 23

   12 tipo_especificador: STRUCT IDENT ABRE_CHAVE atributos_declaracao . FECHA_CHAVE

    FECHA_CHAVE  shift, and go to state 34


State 24

    9 var_colchete: ABRE_COLCHETE NUM_INT . FECHA_COLCHETE var_colchete
   10             | ABRE_COLCHETE NUM_INT . FECHA_COLCHETE

    FECHA_COLCHETE  shift, and go to state 35


State 25

   19 params: VOID .

    $default  reduce using rule 19 (params)


State 26

   23 param: tipo_especificador . IDENT
   24      | tipo_especificador . IDENT ABRE_COLCHETE FECHA_COLCHETE

    IDENT  shift, and go to state 36


State 27

   16 fun_declaracao: tipo_especificador IDENT ABRE_PARENTESES params . FECHA_PARENTESES composto_decl

    FECHA_PARENTESES  shift, and go to state 37


State 28

   18 params: param_lista .

    $default  reduce using rule 18 (params)


State 29

   20 param_lista: param . fatoracao_params_lista

    VIRGULA  shift, and go to state 38

    $default  reduce using rule 22 (fatoracao_params_lista)

    fatoracao_params_lista  go to state 39


State 30

    8 var_declaracao: tipo_especificador IDENT var_colchete PONTO_VIRGULA .

    $default  reduce using rule 8 (var_declaracao)


State 31

   14 fatoracao_atributos_declaracao: atributos_declaracao .

    $default  reduce using rule 14 (fatoracao_atributos_declaracao)


State 32

   13 atributos_declaracao: var_declaracao fatoracao_atributos_declaracao .

    $default  reduce using rule 13 (atributos_declaracao)


State 33

    7 var_declaracao: tipo_especificador IDENT . PONTO_VIRGULA
    8               | tipo_especificador IDENT . var_colchete PONTO_VIRGULA

    ABRE_COLCHETE  shift, and go to state 17
    PONTO_VIRGULA  shift, and go to state 19

    var_colchete  go to state 20


State 34

   12 tipo_especificador: STRUCT IDENT ABRE_CHAVE atributos_declaracao FECHA_CHAVE .

    $default  reduce using rule 12 (tipo_especificador)


State 35

    9 var_colchete: ABRE_COLCHETE NUM_INT FECHA_COLCHETE . var_colchete
   10             | ABRE_COLCHETE NUM_INT FECHA_COLCHETE .

    ABRE_COLCHETE  shift, and go to state 17

    $default  reduce using rule 10 (var_colchete)

    var_colchete  go to state 40


State 36

   23 param: tipo_especificador IDENT .
   24      | tipo_especificador IDENT . ABRE_COLCHETE FECHA_COLCHETE

    ABRE_COLCHETE  shift, and go to state 41

    $default  reduce using rule 23 (param)


State 37

   16 fun_declaracao: tipo_especificador IDENT ABRE_PARENTESES params FECHA_PARENTESES . composto_decl

    ABRE_CHAVE  shift, and go to state 42

    composto_decl  go to state 43


State 38

   21 fatoracao_params_lista: VIRGULA . param_lista

    STRUCT  shift, and go to state 2
    TIPO    shift, and go to state 3

    tipo_especificador  go to state 26
    param_lista         go to state 44
    param               go to state 29


State 39

   20 param_lista: param fatoracao_params_lista .

    $default  reduce using rule 20 (param_lista)


State 40

    9 var_colchete: ABRE_COLCHETE NUM_INT FECHA_COLCHETE var_colchete .

    $default  reduce using rule 9 (var_colchete)


State 41

   24 param: tipo_especificador IDENT ABRE_COLCHETE . FECHA_COLCHETE

    FECHA_COLCHETE  shift, and go to state 45


State 42

   25 composto_decl: ABRE_CHAVE . local_declaracoes comando_lista FECHA_CHAVE

    STRUCT  shift, and go to state 2
    TIPO    shift, and go to state 3

    $default  reduce using rule 27 (local_declaracoes)

    var_declaracao      go to state 46
    tipo_especificador  go to state 22
    local_declaracoes   go to state 47


State 43

   16 fun_declaracao: tipo_especificador IDENT ABRE_PARENTESES params FECHA_PARENTESES composto_decl .

    $default  reduce using rule 16 (fun_declaracao)


State 44

   21 fatoracao_params_lista: VIRGULA param_lista .

    $default  reduce using rule 21 (fatoracao_params_lista)


State 45

   24 param: tipo_especificador IDENT ABRE_COLCHETE FECHA_COLCHETE .

    $default  reduce using rule 24 (param)


State 46

   26 local_declaracoes: var_declaracao . fatoracao_local_declaracoes

    STRUCT  shift, and go to state 2
    TIPO    shift, and go to state 3

    $default  reduce using rule 27 (local_declaracoes)

    var_declaracao               go to state 46
    tipo_especificador           go to state 22
    local_declaracoes            go to state 48
    fatoracao_local_declaracoes  go to state 49


State 47

   25 composto_decl: ABRE_CHAVE local_declaracoes . comando_lista FECHA_CHAVE

    IF               shift, and go to state 50
    WHILE            shift, and go to state 51
    RETURN           shift, and go to state 52
    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_CHAVE       shift, and go to state 42
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56
    PONTO_VIRGULA    shift, and go to state 57

    $default  reduce using rule 30 (comando_lista)

    composto_decl      go to state 58
    comando_lista      go to state 59
    comando            go to state 60
    expressao_decl     go to state 61
    selecao_decl       go to state 62
    selecao            go to state 63
    iteracao_decl      go to state 64
    retorno_decl       go to state 65
    expressao          go to state 66
    var                go to state 67
    expressao_simples  go to state 68
    expressao_soma     go to state 69
    termo              go to state 70
    fator              go to state 71
    ativacao           go to state 72


State 48

   28 fatoracao_local_declaracoes: local_declaracoes .

    $default  reduce using rule 28 (fatoracao_local_declaracoes)


State 49

   26 local_declaracoes: var_declaracao fatoracao_local_declaracoes .

    $default  reduce using rule 26 (local_declaracoes)


State 50

   42 selecao: IF . ABRE_PARENTESES expressao FECHA_PARENTESES comando

    ABRE_PARENTESES  shift, and go to state 73


State 51

   43 iteracao_decl: WHILE . ABRE_PARENTESES expressao FECHA_PARENTESES comando

    ABRE_PARENTESES  shift, and go to state 74


State 52

   44 retorno_decl: RETURN . PONTO_VIRGULA
   45             | RETURN . expressao PONTO_VIRGULA

    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56
    PONTO_VIRGULA    shift, and go to state 75

    expressao          go to state 76
    var                go to state 67
    expressao_simples  go to state 68
    expressao_soma     go to state 69
    termo              go to state 70
    fator              go to state 71
    ativacao           go to state 72


State 53

   67 fator: NUM_INT .

    $default  reduce using rule 67 (fator)


State 54

   66 fator: NUM .

    $default  reduce using rule 66 (fator)


State 55

   63 fator: ABRE_PARENTESES . expressao FECHA_PARENTESES

    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56

    expressao          go to state 77
    var                go to state 67
    expressao_simples  go to state 68
    expressao_soma     go to state 69
    termo              go to state 70
    fator              go to state 71
    ativacao           go to state 72


State 56

   48 var: IDENT .
   49    | IDENT . colchete_var
   68 ativacao: IDENT . ABRE_PARENTESES args FECHA_PARENTESES

    ABRE_COLCHETE    shift, and go to state 78
    ABRE_PARENTESES  shift, and go to state 79

    $default  reduce using rule 48 (var)

    colchete_var  go to state 80


State 57

   38 expressao_decl: PONTO_VIRGULA .

    $default  reduce using rule 38 (expressao_decl)


State 58

   36 comando: composto_decl .

    $default  reduce using rule 36 (comando)


State 59

   25 composto_decl: ABRE_CHAVE local_declaracoes comando_lista . FECHA_CHAVE

    FECHA_CHAVE  shift, and go to state 81


State 60

   29 comando_lista: comando . fatoracao_comando_lista

    IF               shift, and go to state 50
    WHILE            shift, and go to state 51
    RETURN           shift, and go to state 52
    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_CHAVE       shift, and go to state 42
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56
    PONTO_VIRGULA    shift, and go to state 57

    $default  reduce using rule 30 (comando_lista)

    composto_decl            go to state 58
    comando_lista            go to state 82
    fatoracao_comando_lista  go to state 83
    comando                  go to state 60
    expressao_decl           go to state 61
    selecao_decl             go to state 62
    selecao                  go to state 63
    iteracao_decl            go to state 64
    retorno_decl             go to state 65
    expressao                go to state 66
    var                      go to state 67
    expressao_simples        go to state 68
    expressao_soma           go to state 69
    termo                    go to state 70
    fator                    go to state 71
    ativacao                 go to state 72


State 61

   35 comando: expressao_decl .

    $default  reduce using rule 35 (comando)


State 62

   32 comando: selecao_decl .

    $default  reduce using rule 32 (comando)


State 63

   39 selecao_decl: selecao . fatoracao_selecao_decl

    ELSE  shift, and go to state 84

    $default  reduce using rule 40 (fatoracao_selecao_decl)

    fatoracao_selecao_decl  go to state 85


State 64

   33 comando: iteracao_decl .

    $default  reduce using rule 33 (comando)


State 65

   34 comando: retorno_decl .

    $default  reduce using rule 34 (comando)


State 66

   37 expressao_decl: expressao . PONTO_VIRGULA

    PONTO_VIRGULA  shift, and go to state 86


State 67

   46 expressao: var . ATRIBUICAO expressao
   64 fator: var .

    ATRIBUICAO  shift, and go to state 87

    $default  reduce using rule 64 (fator)


State 68

   47 expressao: expressao_simples .

    $default  reduce using rule 47 (expressao)


State 69

   52 expressao_simples: expressao_soma . relacional expressao_soma
   53                  | expressao_soma .

    RELACIONAL  shift, and go to state 88

    $default  reduce using rule 53 (expressao_simples)

    relacional  go to state 89


State 70

   55 expressao_soma: termo . soma expressao_soma
   56               | termo .

    SOMA  shift, and go to state 90
    SUB   shift, and go to state 91

    $default  reduce using rule 56 (expressao_soma)

    soma  go to state 92


State 71

   59 termo: fator . mult termo
   60      | fator .

    MULT  shift, and go to state 93
    DIV   shift, and go to state 94

    $default  reduce using rule 60 (termo)

    mult  go to state 95


State 72

   65 fator: ativacao .

    $default  reduce using rule 65 (fator)


State 73

   42 selecao: IF ABRE_PARENTESES . expressao FECHA_PARENTESES comando

    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56

    expressao          go to state 96
    var                go to state 67
    expressao_simples  go to state 68
    expressao_soma     go to state 69
    termo              go to state 70
    fator              go to state 71
    ativacao           go to state 72


State 74

   43 iteracao_decl: WHILE ABRE_PARENTESES . expressao FECHA_PARENTESES comando

    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56

    expressao          go to state 97
    var                go to state 67
    expressao_simples  go to state 68
    expressao_soma     go to state 69
    termo              go to state 70
    fator              go to state 71
    ativacao           go to state 72


State 75

   44 retorno_decl: RETURN PONTO_VIRGULA .

    $default  reduce using rule 44 (retorno_decl)


State 76

   45 retorno_decl: RETURN expressao . PONTO_VIRGULA

    PONTO_VIRGULA  shift, and go to state 98


State 77

   63 fator: ABRE_PARENTESES expressao . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 99


State 78

   50 colchete_var: ABRE_COLCHETE . expressao FECHA_COLCHETE colchete_var
   51             | ABRE_COLCHETE . expressao FECHA_COLCHETE

    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56

    expressao          go to state 100
    var                go to state 67
    expressao_simples  go to state 68
    expressao_soma     go to state 69
    termo              go to state 70
    fator              go to state 71
    ativacao           go to state 72


State 79

   68 ativacao: IDENT ABRE_PARENTESES . args FECHA_PARENTESES

    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56

    $default  reduce using rule 70 (args)

    expressao          go to state 101
    var                go to state 67
    expressao_simples  go to state 68
    expressao_soma     go to state 69
    termo              go to state 70
    fator              go to state 71
    ativacao           go to state 72
    args               go to state 102
    arg_lista          go to state 103


State 80

   49 var: IDENT colchete_var .

    $default  reduce using rule 49 (var)


State 81

   25 composto_decl: ABRE_CHAVE local_declaracoes comando_lista FECHA_CHAVE .

    $default  reduce using rule 25 (composto_decl)


State 82

   31 fatoracao_comando_lista: comando_lista .

    $default  reduce using rule 31 (fatoracao_comando_lista)


State 83

   29 comando_lista: comando fatoracao_comando_lista .

    $default  reduce using rule 29 (comando_lista)


State 84

   41 fatoracao_selecao_decl: ELSE . comando

    IF               shift, and go to state 50
    WHILE            shift, and go to state 51
    RETURN           shift, and go to state 52
    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_CHAVE       shift, and go to state 42
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56
    PONTO_VIRGULA    shift, and go to state 57

    composto_decl      go to state 58
    comando            go to state 104
    expressao_decl     go to state 61
    selecao_decl       go to state 62
    selecao            go to state 63
    iteracao_decl      go to state 64
    retorno_decl       go to state 65
    expressao          go to state 66
    var                go to state 67
    expressao_simples  go to state 68
    expressao_soma     go to state 69
    termo              go to state 70
    fator              go to state 71
    ativacao           go to state 72


State 85

   39 selecao_decl: selecao fatoracao_selecao_decl .

    $default  reduce using rule 39 (selecao_decl)


State 86

   37 expressao_decl: expressao PONTO_VIRGULA .

    $default  reduce using rule 37 (expressao_decl)


State 87

   46 expressao: var ATRIBUICAO . expressao

    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56

    expressao          go to state 105
    var                go to state 67
    expressao_simples  go to state 68
    expressao_soma     go to state 69
    termo              go to state 70
    fator              go to state 71
    ativacao           go to state 72


State 88

   54 relacional: RELACIONAL .

    $default  reduce using rule 54 (relacional)


State 89

   52 expressao_simples: expressao_soma relacional . expressao_soma

    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56

    var             go to state 106
    expressao_soma  go to state 107
    termo           go to state 70
    fator           go to state 71
    ativacao        go to state 72


State 90

   57 soma: SOMA .

    $default  reduce using rule 57 (soma)


State 91

   58 soma: SUB .

    $default  reduce using rule 58 (soma)


State 92

   55 expressao_soma: termo soma . expressao_soma

    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56

    var             go to state 106
    expressao_soma  go to state 108
    termo           go to state 70
    fator           go to state 71
    ativacao        go to state 72


State 93

   61 mult: MULT .

    $default  reduce using rule 61 (mult)


State 94

   62 mult: DIV .

    $default  reduce using rule 62 (mult)


State 95

   59 termo: fator mult . termo

    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56

    var       go to state 106
    termo     go to state 109
    fator     go to state 71
    ativacao  go to state 72


State 96

   42 selecao: IF ABRE_PARENTESES expressao . FECHA_PARENTESES comando

    FECHA_PARENTESES  shift, and go to state 110


State 97

   43 iteracao_decl: WHILE ABRE_PARENTESES expressao . FECHA_PARENTESES comando

    FECHA_PARENTESES  shift, and go to state 111


State 98

   45 retorno_decl: RETURN expressao PONTO_VIRGULA .

    $default  reduce using rule 45 (retorno_decl)


State 99

   63 fator: ABRE_PARENTESES expressao FECHA_PARENTESES .

    $default  reduce using rule 63 (fator)


State 100

   50 colchete_var: ABRE_COLCHETE expressao . FECHA_COLCHETE colchete_var
   51             | ABRE_COLCHETE expressao . FECHA_COLCHETE

    FECHA_COLCHETE  shift, and go to state 112


State 101

   71 arg_lista: expressao . fatoracao_arg_lista

    VIRGULA  shift, and go to state 113

    $default  reduce using rule 73 (fatoracao_arg_lista)

    fatoracao_arg_lista  go to state 114


State 102

   68 ativacao: IDENT ABRE_PARENTESES args . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 115


State 103

   69 args: arg_lista .

    $default  reduce using rule 69 (args)


State 104

   41 fatoracao_selecao_decl: ELSE comando .

    $default  reduce using rule 41 (fatoracao_selecao_decl)


State 105

   46 expressao: var ATRIBUICAO expressao .

    $default  reduce using rule 46 (expressao)


State 106

   64 fator: var .

    $default  reduce using rule 64 (fator)


State 107

   52 expressao_simples: expressao_soma relacional expressao_soma .

    $default  reduce using rule 52 (expressao_simples)


State 108

   55 expressao_soma: termo soma expressao_soma .

    $default  reduce using rule 55 (expressao_soma)


State 109

   59 termo: fator mult termo .

    $default  reduce using rule 59 (termo)


State 110

   42 selecao: IF ABRE_PARENTESES expressao FECHA_PARENTESES . comando

    IF               shift, and go to state 50
    WHILE            shift, and go to state 51
    RETURN           shift, and go to state 52
    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_CHAVE       shift, and go to state 42
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56
    PONTO_VIRGULA    shift, and go to state 57

    composto_decl      go to state 58
    comando            go to state 116
    expressao_decl     go to state 61
    selecao_decl       go to state 62
    selecao            go to state 63
    iteracao_decl      go to state 64
    retorno_decl       go to state 65
    expressao          go to state 66
    var                go to state 67
    expressao_simples  go to state 68
    expressao_soma     go to state 69
    termo              go to state 70
    fator              go to state 71
    ativacao           go to state 72


State 111

   43 iteracao_decl: WHILE ABRE_PARENTESES expressao FECHA_PARENTESES . comando

    IF               shift, and go to state 50
    WHILE            shift, and go to state 51
    RETURN           shift, and go to state 52
    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_CHAVE       shift, and go to state 42
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56
    PONTO_VIRGULA    shift, and go to state 57

    composto_decl      go to state 58
    comando            go to state 117
    expressao_decl     go to state 61
    selecao_decl       go to state 62
    selecao            go to state 63
    iteracao_decl      go to state 64
    retorno_decl       go to state 65
    expressao          go to state 66
    var                go to state 67
    expressao_simples  go to state 68
    expressao_soma     go to state 69
    termo              go to state 70
    fator              go to state 71
    ativacao           go to state 72


State 112

   50 colchete_var: ABRE_COLCHETE expressao FECHA_COLCHETE . colchete_var
   51             | ABRE_COLCHETE expressao FECHA_COLCHETE .

    ABRE_COLCHETE  shift, and go to state 78

    $default  reduce using rule 51 (colchete_var)

    colchete_var  go to state 118


State 113

   72 fatoracao_arg_lista: VIRGULA . arg_lista

    NUM_INT          shift, and go to state 53
    NUM              shift, and go to state 54
    ABRE_PARENTESES  shift, and go to state 55
    IDENT            shift, and go to state 56

    expressao          go to state 101
    var                go to state 67
    expressao_simples  go to state 68
    expressao_soma     go to state 69
    termo              go to state 70
    fator              go to state 71
    ativacao           go to state 72
    arg_lista          go to state 119


State 114

   71 arg_lista: expressao fatoracao_arg_lista .

    $default  reduce using rule 71 (arg_lista)


State 115

   68 ativacao: IDENT ABRE_PARENTESES args FECHA_PARENTESES .

    $default  reduce using rule 68 (ativacao)


State 116

   42 selecao: IF ABRE_PARENTESES expressao FECHA_PARENTESES comando .

    $default  reduce using rule 42 (selecao)


State 117

   43 iteracao_decl: WHILE ABRE_PARENTESES expressao FECHA_PARENTESES comando .

    $default  reduce using rule 43 (iteracao_decl)


State 118

   50 colchete_var: ABRE_COLCHETE expressao FECHA_COLCHETE colchete_var .

    $default  reduce using rule 50 (colchete_var)


State 119

   72 fatoracao_arg_lista: VIRGULA arg_lista .

    $default  reduce using rule 72 (fatoracao_arg_lista)
